[package]
name = "jamhacks"
version = "0.1.0"
edition = "2021"

#[lib]
#crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.7.0"
bevy_kira_audio = { version = "0.9.0", features = ["flac"] }
dolly = "0.3.0"
lazy_static = "1.4.0"
rand = "0.8.5"
